@@ -1,0 +1,2 @@
+require "user_permissions"
+ActiveRecord::Base.send(:include, ActiveRecord::Uses::User::Permissions)
